# Tarea-Extraclase-1-Datos-II

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Classes/Collector/: Collector.cpp  Collector.h
Classes/List/: List.cpp  List.h
Classes/Node/: Node.cpp  Node.h
Classes/Singly List/: SinglyList.cpp  SinglyList.h
Documentation/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _collector_8cpp.html  _collector_8cpp__incl.dot  _collector_8cpp_source.html  _collector_8h.html  _collector_8h__dep__incl.dot  _collector_8h__incl.dot  _collector_8h_source.html  _node_8cpp.html  _node_8cpp__incl.dot  _node_8cpp_source.html  _node_8h.html  _node_8h__dep__incl.dot  _node_8h__incl.dot  _node_8h_source.html  _singly_list_8cpp.html  _singly_list_8cpp__incl.dot  _singly_list_8cpp_source.html  _singly_list_8h.html  _singly_list_8h__dep__incl.dot  _singly_list_8h__incl.dot  _singly_list_8h_source.html  _target_directories_8txt.html  annotated.html  class_collector-members.html  class_collector.html  class_node-members.html  class_node.html  class_singly_list-members.html  class_singly_list.html  classes.html  clion-environment_8txt.html  clion-log_8txt.html  dir_000001_000002.html  dir_000001_000003.html  (+31 more)
Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  (+36 more)
html/: md_README.html  pages.html
html/search/: all_0.js  pages_0.js
latex/: md_README.tex  refman.tex
