cmake_minimum_required(VERSION 3.17)
project(Tarea_Extraclase_1_Datos_II)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tarea_Extraclase_1_Datos_II main.cpp Classes/Collector/Collector.cpp Classes/Collector/Collector.h Classes/List/List.cpp Classes/List/List.h Classes/Node/Node.cpp Classes/Node/Node.h "Classes/Singly List/SinglyList.cpp" "Classes/Singly List/SinglyList.h")